# vocabulary-quiz

./: .gitignore  CMakeLists.txt  Latin words.txt  Trener Słownictwa b-3.0.spec  UTF-16.BE.nix  UTF-16.BE.win  UTF-16.LE.nix  UTF-16.LE.win  VocabularyQuiz  VocabularyQuiz.cpp  c.sh  gmon.out  makefile  readme.md  słownictwo.txt  test.txt  trener słownictwa.py  write.UTF-8
.dev/: Makefile.win  VocabularyQuiz.dev  VocabularyQuiz.layout  VocabularyQuiz_private.h  VocabularyQuiz_private.rc
src/: UI.cpp  VocabularyQuiz.cpp  functions.h  training.cpp  trener słownictwa.py  types.h  util.cpp  util.h
src/UI/: UI.cpp  consoleUI.cpp  consoleUI.h  messages.h  parser.cpp
src/UI/console/: consoleCommands.cpp  consoleUI.cpp  consoleUI.h
src/data/: data.cpp  data.h
src/testing/: output.vcb  test.vcb  test2  test2.cpp  testEncoding.cpp  voc.vcb
src/training/: training.cpp
vocab/test/: UTF-8.win
